--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     ggplot2,
     plotly,
     shinydashboard,
-    shinythemes
+    shinythemes,
+    shinipsum
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
