--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     plotly,
     shinydashboard,
     shinythemes,
-    shinipsum
+    shinipsum,
+    shinydashboardPlus,
+    shinyWidgets
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
