passed check, with no manual, pdflatex not found

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(run_app)
 import(shiny)
+import(shinydashboard)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
@@ -16,3 +17,10 @@ importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(shinydashboard,renderValueBox)
+importFrom(shinydashboard,valueBox)
+importFrom(shinydashboard,valueBoxOutput)
+importFrom(shinydashboardPlus,boxPlus)
+importFrom(stats,heatmap)
+importFrom(utils,head)
+importFrom(utils,read.csv)
