--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: DIANE
 Title: DIANE
 Version: 0.0.0.9000
 Authors@R: person('Oceane', 'Cassan', email = 'oceane.cassan@supagro.fr', role = c('cre', 'aut'))
-Description: Dashboard for the Inference and Analysis of Network from Expression data
+Description: Dashboard for the Inference and Analysis of Network from Expression data. This package is particularly well suited for combinatoric design such as perturbation experiments.
 License: GPL-3
 Imports: 
     config,
@@ -17,11 +17,11 @@ Imports:
     plotly,
     shinydashboard,
     shinythemes,
-    shinipsum,
     shinydashboardPlus,
-    shinyWidgets
+    shinyWidgets,
+    stats
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 URL: https://github.com/OceaneCsn/DIANE
 BugReports: https://github.com/OceaneCsn/DIANE/issues
