pheatmap in data import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(htmltools,HTML)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
+importFrom(pheatmap,pheatmap)
 importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
@@ -22,5 +23,6 @@ importFrom(shinydashboard,valueBox)
 importFrom(shinydashboard,valueBoxOutput)
 importFrom(shinydashboardPlus,boxPlus)
 importFrom(stats,heatmap)
+importFrom(stringr,str_split_fixed)
 importFrom(utils,head)
 importFrom(utils,read.csv)
