--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     shinythemes,
     shinydashboardPlus,
     shinyWidgets,
-    stats
+    stats,
+    pheatmap
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
