--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,9 @@ Imports:
     shinydashboardPlus,
     shinyWidgets,
     stats,
-    pheatmap
+    pheatmap,
+    HTSFilter,
+    TCC
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
