norm and filter, still bugs with hts display, dont know why

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ importFrom(shiny,column)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shinyWidgets,actionBttn)
+importFrom(shinyWidgets,dropdownButton)
+importFrom(shinyWidgets,switchInput)
 importFrom(shinydashboard,renderValueBox)
 importFrom(shinydashboard,valueBox)
 importFrom(shinydashboard,valueBoxOutput)
