--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Imports:
     HTSFilter,
     TCC,
     shinybusy,
-    reshape2
+    reshape2,
+    limma,
+    markdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
