changed markdown location for install_github

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(limma,plotMDS)
 importFrom(pheatmap,pheatmap)
+importFrom(reshape2,melt)
 importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
