tcc as a global petit r

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ import(TCC)
 import(ggplot2)
 import(shiny)
 import(shinydashboard)
+importFrom(TCC,getNormalizedData)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
