--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(draw_MDS)
 export(draw_distributions)
 export(draw_heatmap)
+export(estimateDEGs)
+export(estimateDispersion)
 export(filter_sum)
 export(normalize)
 export(run_app)
@@ -12,6 +14,9 @@ import(shiny)
 import(shinydashboard)
 importFrom(TCC,getNormalizedData)
 importFrom(config,get)
+importFrom(edgeR,DGEList)
+importFrom(edgeR,estimateDisp)
+importFrom(edgeR,glmFit)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
@@ -39,3 +44,4 @@ importFrom(stats,heatmap)
 importFrom(stringr,str_split_fixed)
 importFrom(utils,head)
 importFrom(utils,read.csv)
+importFrom(utils,write.csv)
