plots MA et vulcano still bugging

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(estimateDEGs)
 export(estimateDispersion)
 export(filter_sum)
 export(normalize)
+export(plotDEGs)
 export(run_app)
 import(TCC)
 import(ggplot2)
