--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     shinybusy,
     reshape2,
     limma,
-    markdown
+    markdown,
+    edgeR
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
