--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     reshape2,
     limma,
     markdown,
-    edgeR
+    edgeR,
+    dashboardthemes
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
