--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     limma,
     markdown,
     edgeR,
-    dashboardthemes
+    dashboardthemes,
+    shinyalert
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
