--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     markdown,
     edgeR,
     dashboardthemes,
-    shinyalert
+    shinyalert,
+    RColorBrewer
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
