--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     edgeR,
     dashboardthemes,
     shinyalert,
-    RColorBrewer
+    RColorBrewer,
+    gridExtra
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
