--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
     dashboardthemes,
     shinyalert,
     RColorBrewer,
-    gridExtra
+    coseq
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
