explore clusters done but commented because makes the server unresponsive (lol)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(draw_profiles)
 export(estimateDEGs)
 export(estimateDispersion)
 export(filter_sum)
+export(get_genes_in_cluster)
 export(normalize)
 export(plotDEGs)
 export(run_app)
