--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(shinydashboard,valueBox)
 importFrom(shinydashboard,valueBoxOutput)
 importFrom(shinydashboardPlus,boxPlus)
 importFrom(stats,heatmap)
+importFrom(stats,model.matrix)
 importFrom(stringr,str_split_fixed)
 importFrom(utils,head)
 importFrom(utils,read.csv)
