--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DIANE
 Title: DIANE
-Version: 0.0.0.9000
+Version: 0.99.1
 Authors@R: person('Oceane', 'Cassan', email = 'oceane.cassan@supagro.fr', role = c('cre', 'aut'))
 Description: Dashboard for the Inference and Analysis of Network from Expression data. This package is particularly well suited for combinatoric design such as perturbation experiments.
 License: GPL-3
@@ -25,9 +25,12 @@ Imports:
     dashboardthemes,
     shinyalert,
     RColorBrewer,
-    coseq
+    coseq,
+    utils
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 URL: https://github.com/OceaneCsn/DIANE
 BugReports: https://github.com/OceaneCsn/DIANE/issues
+biocViews: Workflow, GeneExpressionWorkflow
+Depends: R (>= 4.0.0)
