added runnable examples and example script in dev

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(draw_heatmap)
 export(draw_profiles)
 export(estimateDEGs)
 export(estimateDispersion)
-export(filter_sum)
+export(filter_low_counts)
 export(get_genes_in_cluster)
 export(normalize)
 export(plotDEGs)
