--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
-URL: https://github.com/OceaneCsn/DIANE
+URL: https://github.com/OceaneCsn/DIANE, https://oceanecsn.github.io/DIANE
 BugReports: https://github.com/OceaneCsn/DIANE/issues
 biocViews: Workflow, GeneExpressionWorkflow
 Depends: R (>= 4.0.0)
