--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     RColorBrewer,
     coseq,
     utils
+Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
