description of norm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,11 @@ export(normalize)
 export(plotDEGs)
 export(run_app)
 export(run_coseq)
-import(TCC)
-import(ggplot2)
 import(shiny)
 import(shinydashboard)
+importFrom(TCC,TCC)
+importFrom(TCC,calcNormFactors)
+importFrom(TCC,filterLowCountGenes)
 importFrom(TCC,getNormalizedData)
 importFrom(config,get)
 importFrom(coseq,clusters)
