--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,3 +35,7 @@ URL: https://github.com/OceaneCsn/DIANE, https://oceanecsn.github.io/DIANE
 BugReports: https://github.com/OceaneCsn/DIANE/issues
 biocViews: Workflow, GeneExpressionWorkflow
 Depends: R (>= 4.0.0)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
