--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,7 @@ pandoc: 2.7.3
 pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
+  DIANE: DIANE.html
   DIANE_Programming_Interface: DIANE_Programming_Interface.html
-last_built: 2020-05-17T19:35Z
+last_built: 2020-05-18T01:11Z
 
