--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(draw_MDS)
 export(draw_coseq_run)
 export(draw_distributions)
+export(draw_glm)
 export(draw_heatmap)
 export(draw_profiles)
 export(estimateDEGs)
 export(estimateDispersion)
 export(filter_low_counts)
+export(fit_glm)
 export(get_genes_in_cluster)
 export(normalize)
 export(plotDEGs)
