--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     shinyalert,
     RColorBrewer,
     coseq,
-    utils
+    utils,
+    shinyjs
 Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
