--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,5 +10,28 @@ template:
   params:
     bootswatch: flatly
     
+reference:
 
+- title: DIANE User Interface
+- contents:
+  - run_app
 
+- title: Pre-processing
+- contents:
+  - normalize
+  - filter_low_counts
+
+- title: Differential expression analysis
+- contents:
+  - starts_with("estimate")
+
+- title: Expression based clustering
+- contents:
+  - run_coseq
+  - get_genes_in_cluster
+  - fit_glm
+  
+
+- title: Visualization functions
+- contents:
+  - starts_with("draw_")
