function demo and ui settings for netxork inference

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     RColorBrewer,
     coseq,
     utils,
+    parallel
 Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
