preview of filtering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(run_app)
 export(run_coseq)
 import(shiny)
 import(shinydashboard)
+import(visNetwork)
 importFrom(TCC,TCC)
 importFrom(TCC,calcNormFactors)
 importFrom(TCC,filterLowCountGenes)
