--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(draw_coseq_run)
 export(draw_distributions)
 export(draw_glm)
 export(draw_heatmap)
+export(draw_network_degrees)
 export(draw_profiles)
 export(estimateDEGs)
 export(estimateDispersion)
