--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     gridExtra,
     org.At.tair.db,
     clusterProfiler,
-    plotly
+    plotly,
+    AnnotationDbi
 Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
