--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(community_structure)
 export(convert_from_agi)
+export(convert_from_ensembl)
 export(draw_DEGs)
 export(draw_MDS)
 export(draw_coseq_run)
