functionnal gene info for human in tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(community_structure)
 export(convert_from_agi)
-export(convert_from_ensembl)
 export(draw_DEGs)
 export(draw_MDS)
 export(draw_coseq_run)
@@ -17,6 +16,7 @@ export(estimateDEGs)
 export(estimateDispersion)
 export(filter_low_counts)
 export(fit_glm)
+export(get_gene_information)
 export(get_genes_in_cluster)
 export(normalize)
 export(run_app)
