--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
     AnnotationDbi,
     org.Hs.eg.db,
     foreach,
-    doParallel
+    doParallel,
+    doRNG
 Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
