--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ cache: packages
 
 r:
   - bioc-release
-  
+
+install: travis_wait 30 mvn install
+
 script:
   - R CMD build .
   - R CMD check *tar.gz
