--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(convert_from_agi)
 export(convert_from_ensembl)
 export(draw_DEGs)
 export(draw_MDS)
+export(draw_PCA)
 export(draw_coseq_run)
 export(draw_distributions)
 export(draw_enrich_go)
@@ -27,6 +28,7 @@ export(network_thresholding)
 export(normalize)
 export(run_app)
 export(run_coseq)
+import(ggplot2)
 import(shiny)
 import(shinydashboard)
 import(visNetwork)
