added grouping function and tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(fit_glm)
 export(get_gene_information)
 export(get_genes_in_cluster)
 export(get_locus)
+export(group_regressors)
 export(network_data)
 export(network_inference)
 export(network_thresholding)
