added to GUI and updated site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(draw_PCA)
 export(draw_coseq_run)
 export(draw_distributions)
 export(draw_enrich_go)
+export(draw_expression_levels)
 export(draw_glm)
 export(draw_heatmap)
 export(draw_network)
