function with custom annotation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     doParallel,
     doRNG,
     ade4,
-    ggraph
+    ggraph,
+    GO.db
 Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
