added to dea module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(draw_network)
 export(draw_network_degrees)
 export(draw_profiles)
 export(enrich_go)
+export(enrich_go_custom)
 export(estimateDEGs)
 export(estimateDispersion)
 export(filter_low_counts)
