--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,11 +28,14 @@ export(get_genes_in_cluster)
 export(get_locus)
 export(group_regressors)
 export(network_data)
+export(network_from_tests)
 export(network_inference)
 export(network_thresholding)
 export(normalize)
 export(run_app)
 export(run_coseq)
+export(test_edges)
+exportMethods(GENIE3OOB)
 import(ggplot2)
 import(shiny)
 import(shinydashboard)
