adding it to the vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(fit_glm)
 export(get_gene_information)
 export(get_genes_in_cluster)
 export(get_locus)
+export(get_nEdges)
 export(group_regressors)
 export(network_data)
 export(network_from_tests)
