importance metric choice for inference, with warning if na on oob

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(draw_DEGs)
 export(draw_MDS)
 export(draw_PCA)
 export(draw_coseq_run)
+export(draw_discarded_edges)
 export(draw_distributions)
 export(draw_enrich_go)
 export(draw_enrich_go_map)
