--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,8 @@ Imports:
     ggridges,
     pkgload,
     randomForest,
-    rfPermute
+    rfPermute,
+    knitr
 Remotes: nik01010/dashboardthemes 
 Encoding: UTF-8
 LazyData: true
@@ -56,6 +57,5 @@ BugReports: https://github.com/OceaneCsn/DIANE/issues
 biocViews: Workflow, GeneExpressionWorkflow
 Depends: R (>= 4.0.0)
 Suggests: 
-    knitr,
     rmarkdown
 VignetteBuilder: knitr
