--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(draw_heatmap)
 export(draw_network)
 export(draw_network_degrees)
 export(draw_profiles)
+export(draw_venn)
 export(enrich_go)
 export(enrich_go_custom)
 export(estimateDEGs)
