edges testing time estimation, fixed namespace in go map, fixed edges width in visNetwork for fdr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(enrich_go)
 export(enrich_go_custom)
 export(estimateDEGs)
 export(estimateDispersion)
+export(estimate_test_edges_time)
 export(filter_low_counts)
 export(fit_glm)
 export(get_gene_information)
