--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(aggregate_splice_variants)
 export(check_IDs)
 export(convert_from_agi)
 export(convert_from_ensembl)
+export(convert_from_ensembl_ce)
 export(convert_from_ensembl_dm)
 export(convert_from_ensembl_mus)
 export(describe_node)
