--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(convert_from_agi)
 export(convert_from_ensembl)
 export(convert_from_ensembl_ce)
 export(convert_from_ensembl_dm)
+export(convert_from_ensembl_eck12)
 export(convert_from_ensembl_mus)
 export(describe_node)
 export(draw_DEGs)
