passed checks by adding missing dependencies in DESCRIPTION and correcting vignettes titles

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,9 @@ Imports:
     rmarkdown,
     tictoc,
     future,
-    promises
+    promises,
+    ggVennDiagram,
+    loggit
 Suggests: 
     org.Hs.eg.db,
     org.Dm.eg.db,
