--- a/shiny-customized.config
+++ b/shiny-customized.config
@@ -1,3 +1,5 @@
+run_as shiny;
+
 server {
   listen 8086;
 
@@ -5,7 +7,7 @@ server {
 
     #log_file_mode 0644;
 	
-	site_dir /srv/shiny-server;
+	  site_dir /srv/shiny-server;
     log_dir /var/log/shiny-server;
 
     google_analytics_id UA-179775819-1;
