fixed a global seed and got coseq to be reproducible by disabling parallel option and setting the seed argument to coseq()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     dashboardthemes,
     shinyalert,
     RColorBrewer,
-    coseq,
+    coseq (>= 1.14.0),
     utils,
     parallel,
     GENIE3,
