--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,7 +81,7 @@ importFrom(shinyWidgets,switchInput)
 importFrom(shinydashboard,renderValueBox)
 importFrom(shinydashboard,valueBox)
 importFrom(shinydashboard,valueBoxOutput)
-importFrom(shinydashboardPlus,boxPlus)
+importFrom(shinydashboardPlus,box)
 importFrom(stats,heatmap)
 importFrom(stats,model.matrix)
 importFrom(stringr,str_split_fixed)
