--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DIANE
 Title: DIANE
 Version: 0.99.1
-Authors@R: person('Oceane', 'Cassan', email = 'oceane.cassan@supagro.fr', role = c('cre', 'aut'))
+Authors@R: person('Oceane', 'Cassan', email = 'oceane.cassan@cnrs.fr', role = c('cre', 'aut'))
 Description: Dashboard for the Inference and Analysis of Network from Expression data. This package is particularly well suited for combinatoric design such as perturbation experiments.
 License: GPL-3
 Imports: 
