added and started testing contribution from AS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(convert_from_ensembl_ce)
 export(convert_from_ensembl_dm)
 export(convert_from_ensembl_eck12)
 export(convert_from_ensembl_mus)
+export(create_versus_design)
 export(describe_node)
 export(draw_DEGs)
 export(draw_MDS)
