added markdown as dependency as it may cause install to crash in some settings (macos)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Imports:
     future,
     promises,
     ggVennDiagram,
-    loggit
+    loggit,
+    markdown
 Suggests: 
     org.Hs.eg.db,
     org.Dm.eg.db,
