--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ Imports:
     ggridges,
     pkgload,
     randomForest,
-    rfPermute,
+    rfPermute (>= 2.5.0),
     knitr,
     rmarkdown,
     tictoc,
