Update man mages and very minor tweaks.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(draw_venn)
 export(enrich_go)
 export(enrich_go_custom)
 export(estimateDEGs)
+export(estimateDEGs_legacy)
 export(estimateDispersion)
 export(estimate_test_edges_time)
 export(filter_low_counts)
